user-service/src/main/java/com/example/user_service/error/ApiError.java
package com.example.user_service.error;

public record ApiError(String code, String message, String path, String timestamp) {
}
